# 42

./: get_next_line1.c
GNL/: get_next_line.c  get_next_line.h  get_next_line1.c  get_next_line2.c  newtest.c  test_file  test_gnl
fillit/: Makefile  author  fillit.h  functions.c  list_functions.c  main.c  placing.c  reading.c  solving.c  validation.c
ft_ls/: .init.el.swp  CMakeLists.txt  main.c
ft_ls/untitled/: .#too_long_name_output.txt  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  output.txt  too_long_file_name.txt  untitled  untitled.cbp
ft_ls/untitled/ft_ls/: Makefile  Makefile_pozhiloy  Makefile~  ft_ls  ft_ls.c  ft_ls.h  ft_rbtclr.c  ft_rbtforeach.c  ft_rbtnew.c  ft_rbtroot.c  list_functions.c  main.c  output.c  rbt_add.c  sorting.c
ft_ls/untitled/ft_ls/ft_ls.dSYM/Contents/Resources/DWARF/: ft_ls
ft_ls/untitled/ft_ls/libft/includes/: get_next_line.h  libft.h.gch
ft_ls/untitled/ft_ls/nkertzma/: Makefile  author
ft_ls/untitled/ft_ls/nkertzma/includes/: ft_ls.h
ft_ls/untitled/ft_ls/nkertzma/libft/: ft_diglen.c  ft_putendl.c  ft_rbtclr.c  ft_rbtnew.c  ft_rev_strcmp.c  libft.h
ft_ls/untitled/ft_ls/nkertzma/srcs/: ft_print_col.c  ft_print_tools.c  ls_error.c  main.c  parse_tools.c  parser.c  reader.c  reader1.c  reader2.c  sorts.c  sorts2.c  tools.c
ft_ls/untitled/ft_ls/rbt_funcs_trhogoro/: ft_rbtadd.c  ft_rbtforeach.c
gnl/: Makefile  a.out  get_next_line.c  get_next_line.h  gnl.sh  main.c  test_file  test_gnl  test_gnl copy  war_and_peace.txt
libft/: Makefile  a.out  ft_atoi.c  ft_atoi_main.c  ft_bzero.c  ft_bzero_main.c  (+55 more)
(+86 files in other folders)
